# robustgqg

./: .gitignore  README.md  pyproject.toml  robustgqg_demo.ipynb
.github/workflows/: docs.yml
docs/source/: api.rst  conf.py  index.rst
examples/: filter_regression_ex.ipynb  mean_estimation_ex.ipynb
robustgqg/: types.py  utils.py
robustgqg/mean/: __init__.py  base.py  explicit.py  filter.py  options.py  projections.py  utils.py
robustgqg/regression/: __init__.py  hypercontractivity.py  regression.py
tests/: test_filter_regression.py  test_mean_explicit.py  test_mean_filter.py  utils.py
