[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robustgqg"
version = "1.0.0"
description = "Robust estimation via generalized quasi-gradients (filter algorithms for regression and mean estimation)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.21",
]
keywords = ["robust", "regression", "mean", "optimization", "sum-of-squares", "hypercontractivity"]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.5",
  "black>=23",
  "sphinx>=6",
  "furo>=2024.8.6",
]
sos = [
  "cvxpy>=1.3",
  "scs>=3",
]

[project.urls]
Homepage = "https://github.com/neilpattanaik/robustgqg"
Issues = "https://github.com/neilpattanaik/robustgqg/issues"
Documentation = "https://neilpattanaik.github.io/robustgqg/"

[tool.setuptools.packages.find]
where = ["."]
include = ["robustgqg*"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
  "docs",
  "tests",
  "examples",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "W",   # pycodestyle warnings
  "B",   # flake8-bugbear
]
ignore = [
  "E203",  # whitespace before ':' (conflict with black)
  "E266",  # too many leading '#' for block comment
]

[tool.black]
line-length = 100
target-version = ["py39"]
skip-string-normalization = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
]
